[package]
authors = ["PARK Youngho"]
name = "qrate"
version = "0.5.0"
edition = "2024"
keywords = ["quiz", "bank", "examination", "question", "teacher"]
categories = ["algorithms", "data-structures", "database"]
description = "A examination generator library that generates different quiz sets for all students so that each student may have a different quiz set from the quiz sets of the others."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/piaoyh/qrate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptocol = "0.19.6"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust_xlsxwriter = "0.93.0"
calamine = "0.32.0"
docx-rs = "0.4.18"
genpdf = "0.2.0"
# rtf-grimoire = "0.2.1"

[profile.dev]
incremental = false
